--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 *,
 *::after,
 *::before {
@@ -15,9 +16,89 @@ img {
 a {
   text-decoration: none; }
 
+p {
+  margin: 0; }
+
 main {
   width: 90%;
   padding: 40px;
   max-width: 800px;
   margin-left: auto;
   margin-right: auto; }
+
+.formulario {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 20px;
+  row-gap: 20px; }
+  .formulario__label {
+    display: block;
+    font-weight: 700;
+    padding: 10px;
+    cursor: pointer; }
+  .formulario__grupo-input {
+    position: relative; }
+  .formulario__input {
+    width: 100%;
+    height: 45px;
+    line-height: 45px;
+    border-radius: 3px;
+    margin-bottom: 16px;
+    padding: 0 40px 0 10px;
+    transition: .3s ease all;
+    background-color: #fff;
+    border: 3px solid transparent; }
+    .formulario__input:focus {
+      outline: none;
+      border-color: #0075ff;
+      box-shadow: 3px 0px 30px rgba(163, 163, 163, 0.4); }
+  .formulario__validacion-estado {
+    right: 10px;
+    bottom: 31px;
+    z-index: 100;
+    font-size: 16px;
+    position: absolute; }
+  .formulario__input-error {
+    font-size: 12px;
+    display: none; }
+  .formulario__input-error--activo {
+    display: block; }
+  .formulario__checkbox {
+    margin-right: 10px; }
+  .formulario__mensaje, .formulario__grupo-terminos, .formulario__grupo--btn-enviar {
+    grid-column: span 2; }
+  .formulario__mensaje {
+    height: 45px;
+    padding: 0 15px;
+    line-height: 45px;
+    border-radius: 3px;
+    background-color: #f66060;
+    display: none; }
+  .formulario__mensaje--activo {
+    display: block; }
+  .formulario__grupo--btn-enviar {
+    display: flex;
+    align-items: center;
+    flex-direction: column; }
+  .formulario__btn {
+    width: 30%;
+    height: 45px;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    line-height: 45px;
+    font-weight: bold;
+    border-radius: 3px;
+    margin-bottom: 16px;
+    background-color: #000;
+    transition: .1s ease all; }
+    .formulario__btn:hover {
+      box-shadow: 3px 0px 30px #a3a3a3; }
+  .formulario__mensaje-exito {
+    font-size: 14px;
+    color: #119200;
+    display: none; }
+  .formulario__mensaje-exito--activo {
+    display: block; }
+
+/* -------- Estilos para validación --------- */
