--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -33,7 +33,7 @@ main {
 
 .formulario {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     column-gap: 20px;
     row-gap: 20px;
 
@@ -62,12 +62,12 @@ main {
         &:focus {
             outline: none;
             border-color: #0075ff;
-            box-shadow: 3px 0px 30px rgba(163,163,163, 0.4);
+            box-shadow: 3px 0px 30px rgba(163, 163, 163, 0.4);
         }
     }
 
     &__validacion-estado {
-        // opacity: 0;
+        opacity: 0;
         right: 10px;
         bottom: 31px;
         z-index: 100;
@@ -77,6 +77,7 @@ main {
 
     &__input-error {
         font-size: 12px;
+
         display: none;
     }
 
@@ -128,13 +129,14 @@ main {
         transition: .1s ease all;
 
         &:hover {
-            box-shadow: 3px 0px 30px rgba(163,163,163,1);
+            box-shadow: 3px 0px 30px rgba(163, 163, 163, 1);
         }
     }
 
     &__mensaje-exito {
         font-size: 14px;
         color: #119200;
+
         display: none;
     }
 
@@ -147,6 +149,21 @@ main {
 
 /* -------- Estilos para validación --------- */
 
-.formulario {
-    
+.formulario__grupo-correcto .formulario__validacion-estado {
+    color: #1ed12d;
+    opacity: 1;
 }
+
+.formulario__grupo-incorrecto .formulario__label {
+    color: #bb2929;
+}
+
+.formulario__grupo-incorrecto .formulario__validacion-estado {
+    color: #bb2929;
+    opacity: 1;
+}
+
+.formulario__grupo-incorrecto .formulario__input {
+    border: 3px solid #bb2929;
+}
+
