--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,7 @@ main {
       border-color: #0075ff;
       box-shadow: 3px 0px 30px rgba(163, 163, 163, 0.4); }
   .formulario__validacion-estado {
+    opacity: 0;
     right: 10px;
     bottom: 31px;
     z-index: 100;
@@ -102,3 +103,16 @@ main {
     display: block; }
 
 /* -------- Estilos para validación --------- */
+.formulario__grupo-correcto .formulario__validacion-estado {
+  color: #1ed12d;
+  opacity: 1; }
+
+.formulario__grupo-incorrecto .formulario__label {
+  color: #bb2929; }
+
+.formulario__grupo-incorrecto .formulario__validacion-estado {
+  color: #bb2929;
+  opacity: 1; }
+
+.formulario__grupo-incorrecto .formulario__input {
+  border: 3px solid #bb2929; }
