--- a/css/styles.css
+++ b/css/styles.css
@@ -115,4 +115,4 @@ main {
   opacity: 1; }
 
 .formulario__grupo-incorrecto .formulario__input {
-  border: 3px solid #bb2929; }
+  border-color: #bb2929; }
