--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -164,6 +164,7 @@ main {
 }
 
 .formulario__grupo-incorrecto .formulario__input {
-    border: 3px solid #bb2929;
+    // border: 3px solid #bb2929;
+    border-color: #bb2929;
 }
 
